# custom_vqe

./: LICENSE  README.md  pyproject.toml
custom_vqe/ansatz/: __init__.py  ansatz_ucc.py
custom_vqe/ansatz/tests/: __init__.py  test_ansatz_ucc.py
custom_vqe/circuit/: __init__.py  circuit.py
custom_vqe/general/: __init__.py  pauli_array.py
custom_vqe/general/tests/: __init__.py  test_pauli_array.py
examples/: h2.py  hydrogen_chain.py  moldata.json  ref_struc.bib
examples/qiskit_chks/: README  __init__.py  ammonia_dimer_data  h2_data  hf_dimer_data  qiskit_vqe.py  water_dimer_data
