[project]
name = "custom_vqe"
dynamic = ["version", "dependencies"]
description = "Python tools for customized VQE simulation." 
license = { file = "LICENSE" }
readme = "README.md"
authors = [{name = "Debabrata Bhattacharyya", email = "deba.bhat.90@gmail.com"}]
maintainers = [{name = "Debabrata Bhattacharyya", email = "deba.bhat.90@gmail.com"}]
keywords = ["Hamiltonian Simulation", "Variational Quantum Eigensolver"]

[tool.poetry]
version = "0.0.1"


[tool.poetry.dependencies]
python = "^3.10"
pyscf = "^2.10.0"
qiskit = "2.1.2"
qiskit-aer = "0.17.2"
qiskit-algorithms = "0.4.0"
qiskit-nature = "0.7.2"
numpy = "2.2.6"
scipy = "1.15.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "6.2.1"
coverage = "7.9.1"


[tool.poetry.group.lint.dependencies]
pep8 = "^1.7.1"
ruff = "^0.12.12"


[tool.poetry.group.docs.dependencies]
sphinx = "8.1.3"
sphinx-gallery = "0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["__init__.py"] 
line-length = 120
target-version = "py312"
force-exclude = true

[tool.ruff.lint]
select = ["I", "E", "W", "D", "PL", "F"]

ignore = ["D407", "D203", "D213", "D416", "PLR0912", "PLR0911", "PLR0915", "PLR2004", "PLR0913", "F811", "E203"]
# Rules Ignored

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"



